Fixed table for mode collapse page, lightened url font-weight for a > code, added images folder to static/

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -421,6 +421,10 @@ code {
   background: var(--lightgray);
 }
 
+a > code {
+  font-weight: $normalWeight;
+}
+
 .center {
   & tbody,
   & li,
